# eclipsoid

./: .gitignore  .readthedocs.yaml  IntegralBounds.ipynb  LICENSE  README.md  mkdocs.yml  oblate_planet.h5  pyproject.toml
core/: __init__.py  bounds.py  integration.py  solution.py  utils.py
core/jax/: __init__.py  bounds.py  light_curve.py  solution.py  utils.py
docs/: about.md  index.md
notebooks/: BruteForceVsNumerical.ipynb  EllipsoidalSystem.ipynb  FisherForecast.ipynb  FisherInfo.ipynb  FittingOblatePlanet.ipynb  IntegralAngles.ipynb  IntersectionPoints.ipynb  JaxifiedTransitModel.ipynb  NestedSamplingFit.ipynb  OblateLightCurveTest.ipynb  PlanetParamsIngester.ipynb  Sing_2024_Fig1_WASP107b_white_light_curve_data.csv  jexosim_niriss_soss_gr700xd_point_to_point_scatter.csv  oblate_planet_NUTS.py  planet_params_full.csv  planet_pop.csv  wasp107.ipynb  wasp107_niriss1.ipynb  wasp107_niriss2.ipynb
proofs/: EllipsoidalSystem.ipynb  FittingOblatePlanet.ipynb  IntegralAngles.ipynb
src/eclipsoid/: __init__.py  bounds.py  ellipsoid.py  gdark.py  light_curve.py  oblate.py  oblate_GUI.py  plotting_utils.py  prolate.py  solution.py  utils.py  visualization.py
src/eclipsoid/legacy/: light_curve.py
src/jax0planet/: light_curve.py  oblate_GUI.py
src/jax0planet/numpy_src/: bounds.py
tests/: starry_gdark_map.npy  test_api.ipynb  test_gdark.py  test_oblate.py  test_prolate.py  test_utils.py
