[project]
name = "eclipsoid"
version = "0.0.2"
description = "Transit models for oblate planets in Jax"
readme = "README.md"
requires-python =">=3.9"
license = { text = "MIT License" }
authors = [
  {name="Shishir Dholakia", email="dholakia.shishir@gmail.com"},
  {name = "Shashank Dholakia", email = "s.dholakia@uq.edu.au"},
]
keywords = ["python", "exoplanet", "machine-learning", "jax", "autodiff", "differentiable", "transit", "telescope"]
urls = {repository = "https://github.com/shishirdholakia/jax0planet/"}
dependencies = ["scipy", "numpy", "jaxoplanet", "zodiax>=0.4.1", "jaxlib<=0.4.32"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
extras = ["matplotlib", "jupyter", "jupyterlab", "tqdm", "numpyro"]
dev = ["pytest"]